name:                CodeFarm
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/chrisdongwon/CodeFarm#readme
license:             BSD3
license-file:        LICENSE
author:              chris
maintainer:          chrisdongwon@gmail.com
copyright:           2022 chris
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable CodeFarm
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
